// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 50%;
  padding: 0.5rem;
  background: #fafafa;
  border: solid #767676;
  border-width: 0 0 0.15rem 0;
  font-size: 1.2rem;
  color: #000;
}

.c0:focus {
  border: solid #000;
  border-width: 0 0 0.15rem 0;
}

<input
    class="c0"
  />
</DocumentFragment>
`;

exports[`<TextInput /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  min-width: 50%;
  padding: 0.5rem;
  background: #000;
  border: solid #8d8d8d;
  border-width: 0 0 0.15rem 0;
  font-size: 1.2rem;
  color: #fff;
}

.c0:focus {
  border: solid #fff;
  border-width: 0 0 0.15rem 0;
}

<input
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <InputRadio /> 1`] = `
<DocumentFragment>
  .c0 {
  opacity: 0;
}

<input
    class="c0"
  />
</DocumentFragment>
`;
